--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -9,6 +9,7 @@
         }
     }
     &__official {
+        margin: 0 15px;
         color:#fff;
         font-size: 12px;
         font-weight: 500;
