--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -9,7 +9,7 @@
         }
     }
     &__official {
-        margin: 0 15px;
+        margin:15px;
         color:#fff;
         font-size: 12px;
         font-weight: 500;
