--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -15,5 +15,9 @@
         font-size: 16px;
         font-weight: 400;
     }
-
+    &_subbmit {
+        width: 100%;
+        height: 55px;
+        font-size: 16px;
+    }
 }
