--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -2,4 +2,10 @@
     text-align: center;
     font-weight: 700;
     font-size: 30px;
+    text-transform: uppercase;
+    &_left{
+        color:#fff;
+        font-size: 36px;
+        text-align: left;
+    }
 }
