--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -14,6 +14,22 @@
     .promo__subheader {
         font-size: 20px;
     }
+    .consultation {
+        padding: 50px 0 50px 0;
+        min-height: 550px;
+    }
+    .title_left {
+        font-size: 30px;
+        text-align: center;
+    }
+    .consultation__descr {
+        text-align: center;
+    }
+    .feed-form {
+        margin: 0 auto;
+        margin-top: 35px;
+    }
+    
 }
 
 @media (max-width: 767px) {
@@ -103,5 +119,14 @@
     }
     .advantages__descr {
         margin-top: 10px;
+    }
+    .title_left {
+        font-size: 20px;
+    }
+    .consultation {
+        padding: 50px 0 30px 0;
+    }
+    .consultation__descr {
+        font-size: 15px;
     }
 }
