--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -20,4 +20,9 @@
         height: 55px;
         font-size: 16px;
     }
+    &_mini {
+        font-size: 14px;
+        width: 131px;
+        height: 40px;
+    }
 }
