--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -13,7 +13,7 @@
         font-size: 14px;
         font-weight: 300;
         color: #4b4b4b;
-        -moz-appearance: textfield;
+        appearance: textfield;
         &:nth-child(3){
             margin-bottom: 20px;
         }
