--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,7 @@
 @import 'blocks/titles';
 @import 'blocks/consultation';
 @import 'blocks/forms';
-@import 'base/media';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/feed';
+@import 'base/media';
